bug 113144 installer shouldn't download entire set of xpi files just because one of them was missing from the "blob". r=sgehani,sr=darin